Fix image alignment in cells

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,19 @@ body, html {
   }
 
 img {
-    height: revert-layer;
+    max-width:100%;
+    max-height:100%;
+    margin:0 auto;
+}
+.shipBox {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    text-align: center;
+    vertical-align: middle;
+    align-items: center;
+}
+.svg-inline--fa {
+    margin: 0 auto;
+    display: block;
 }
